[tool.poetry]
name = "quiz"
version = "0.1.0"
description = "An app to quiz the user on trivia"
authors = ["Robert Portelli <github@robertportelli.com>"]
readme = "README.md"
packages = [{include = "quiz", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
tomlkit = "^0.12.3"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.5.0"
tomlkit = "^0.12.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
